--- a/index.html
+++ b/index.html
@@ -459,6 +459,8 @@ numbers.length;
     </article>
   </slide>
 
+  <slide class="fill nobackground" style="background-image: url(images/tw_levelup_oneslide-1024x768.png); background-size: 100%; background-repeat:no-repeat;"></slide>
+
   <slide class="logoslide nobackground">
     <article class="flexbox vcenter">
       <span><img src="images/tw-bracketed-logo-color_617x200.png"></span>
