Added callback comment

--- a/index.html
+++ b/index.html
@@ -476,6 +476,13 @@ simpleFunction();  // prints "Hello World" to the console
   </slide>
 
   <slide>
+    <aside class="note">
+      <section>
+        <ul>
+          <li>map_function is usually referred to as a <em>callback</em> function</li>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Functions as arguments</h2>
     </hgroup>
