--- a/index.html
+++ b/index.html
@@ -471,6 +471,7 @@ child.greet();  // prints "Hello Bob" to the console
       <section>
         <ul>
           <li>I write better JavaScript code the more &quot;functional&quot; I make it.</li>
+          <li>It's a function expression</li>
         </ul>
       </section>
     </aside>
@@ -572,17 +573,35 @@ window.global3 = 3;
     </hgroup>
     <article>
       <p>JavaScript uses C's block syntax (curly braces <code>{}</code>), but there's no block scope.</p>
+      <p>There are only two scopes: global and function scope</p>
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Scoping brain teaser</h2>
+    </hgroup>
+    <article class="build">
       <pre class="prettyprint" data-lang="javascript">
-var myFunction = function() {
-    global1 = 1;
-    var nonGlobal = "I only exist inside myFunction";
-}
-var global2 = 2;
-window.global3 = 3;
+var first = 0;
+var scopeTest = function() {
+    var first = 1;
+    console.log("first=" + first);
+    if (true) {
+        var second = 2;
+    }
+    console.log("second=" + second);
+};
+scopeTest();
+console.log("first=" + first);
+console.log("second=" + second);
 </pre>
-      <p><code>global1</code> is global because we forgot <code>var</code></p>
-      <p><code>global2</code> is global because we declared it outside of a function or object</p>
-      <p><code>global3</code> is global because we added it to the global web browser <code>window</code> object</p>
+      <pre class="prettyprint" data-lang="javascript">
+>> first=1
+   second=2
+   first=0
+   ReferenceError: second is not defined
+</pre>
     </article>
   </slide>
 
