--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
       <h2>Today's agenda</h2>
     </hgroup>
     <article>
-      <p>Some boring bits</p>
-      <p>Some necessary bits</p>
-      <p>Some interesting bits</p>
-      <p>Some awesome bits</p>
-      <p>Some surprising bits</p>
-      <p>Some bad bits</p>
+      <p>Something boring</p>
+      <p>Something necessary</p>
+      <p>Something interesting</p>
+      <p>Something awesome</p>
+      <p>Something surprising</p>
+      <p>Something bad</p>
     </article>
   </slide>
 
@@ -198,13 +198,13 @@
       <p>Netscape marketing changed the name from LiveScript to JavaScript in December 1995.</p>
       <p>Netscape Navigator 2.0 with JavaScript support launched in March 1996.</p>
       <p>Netscape delivered JavaScript to Ecma International for standardisation.</p>
-      <p>June 1997: First edition of ECMA-262 ECMAScript Language Specification released.</p>
+      <p>June 1997: First edition of ECMA-262 ECMAScript Language Specification.</p>
     </article>
   </slide>
 
   <slide>
     <hgroup>
-      <h2>Today</h2>
+      <h2>Today: es5</h2>
     </hgroup>
     <article class="flexbox vcenter">
       <img src="images/ecmascript-5-standard-frontpage-683x383.png" alt="ECMAScript 5.1 Specification" style="width: 854px; height: 479px;">
@@ -213,7 +213,7 @@
 
   <slide>
     <hgroup>
-      <h2>Tomorrow</h2>
+      <h2>Tomorrow: es6</h2>
     </hgroup>
     <article class="flexbox vcenter">
       <img src="images/ecmascript-6-draft-standard-frontpage-980x605.png" alt="ECMAScript 6 Draft Specification" style="width: 784px; height: 484px;">
