Adding non-widescreen option

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body style="opacity: 0">
 
 <slides class="layout-widescreen">
+<!--<slides class="layout">-->
 
     <!-- <p>Add <code><a href="?presentme=true" target="_self">?presentme=true</a></code> to the URL to enabled presenter mode. -->
     <!-- This setting is sticky, meaning refreshing the page will persist presenter mode.</p> -->
@@ -413,7 +414,7 @@ numbers.length;
       <p>This can be used in conditional expressions:</p>
       <pre class="prettyprint" data-lang="javascript">
 if (someVariable) {
-    console.log("<b>code in here only executes if someVariable is truthy</b>");
+    console.log("<b>this only executes if someVariable is truthy</b>");
 }
 </pre>
       <p>Can be used as a simple check for <code>null</code>, <code>undefined</code>, <code>NaN</code> and more.</p>
