Reverting to non-widescreen layout

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 </head>
 <body style="opacity: 0">
 
-<slides class="layout-widescreen">
-<!--<slides class="layout">-->
+<!--<slides class="layout-widescreen">-->
+<slides class="layout">
 
     <!-- <p>Add <code><a href="?presentme=true" target="_self">?presentme=true</a></code> to the URL to enabled presenter mode. -->
     <!-- This setting is sticky, meaning refreshing the page will persist presenter mode.</p> -->
