Fix images for narrow screen (instead of widescreen)

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 </head>
 <body style="opacity: 0">
 
-<slides class="layout-widescreen">
-<!--<slides class="layout">-->
+<!-- <slides class="layout-widescreen"> -->
+<slides class="layout">
 
     <!-- <p>Add <code><a href="?presentme=true" target="_self">?presentme=true</a></code> to the URL to enabled presenter mode. -->
     <!-- This setting is sticky, meaning refreshing the page will persist presenter mode.</p> -->
     <!-- <p>Hit <code><a href="?presentme=false" target="_self">?presentme=false</a></code> to disable presenter mode.</p> -->
 
-  <slide class="logoslide nobackground">
+  <!-- <slide class="logoslide nobackground">
     <article class="flexbox vcenter">
       <span><img src="images/tw-bracketed-logo-color_617x200.png"></span>
     </article>
-  </slide>
+  </slide> -->
 
   <slide class="title-slide segue nobackground">
     <aside class="twbar"><img src="images/tw_brackets_color_128x128.png"></aside>
     <!-- The content of this hgroup is replaced programmatically through the slide_config.json. -->
     <hgroup>
-      <h1 data-config-title><!-- populated from slide_config.json --></h1>
-      <h2 data-config-subtitle><!-- populated from slide_config.json --></h2>
-      <p data-config-presenter><!-- populated from slide_config.json --></p>
+      <h1 data-config-title><!-- populated from slide_config.js --></h1>
+      <h2 data-config-subtitle><!-- populated from slide_config.js --></h2>
+      <p data-config-presenter><!-- populated from slide_config.js --></p>
     </hgroup>
   </slide>
 
@@ -204,20 +204,36 @@
   </slide>
 
   <slide>
+    <aside class="note">
+      <section>
+        <ul>
+          <li>We&#39;ll focus on es5 in this lecture</li>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
-      <h2>Today: es5</h2>
+      <h2>Today in the browser: es5</h2>
     </hgroup>
     <article class="flexbox vcenter">
-      <img src="images/ecmascript-5-standard-frontpage-683x383.png" alt="ECMAScript 5.1 Specification" style="width: 854px; height: 479px;">
+      <img src="images/ecmascript-5-standard-frontpage-683x383.png" alt="ECMAScript 5.1 Specification" style="width: 800px; height: 449px;">
     </article>
   </slide>
 
   <slide>
     <hgroup>
-      <h2>Tomorrow: es6</h2>
+      <h2>Today on the server: es6</h2>
     </hgroup>
     <article class="flexbox vcenter">
-      <img src="images/ecmascript-6-draft-standard-frontpage-980x605.png" alt="ECMAScript 6 Draft Specification" style="width: 784px; height: 484px;">
+      <img src="images/ecmascript-6-standard-frontpage-1724x918.png" alt="ECMAScript 2015 Specification" style="width: 800px; height: 426px;">
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Tomorrow: es7</h2>
+    </hgroup>
+    <article class="flexbox vcenter">
+      <img src="images/ecmascript-7-draft-1034x436.png" alt="ECMAScript 2016 Specification" style="width: 800px; height: 337px;">
     </article>
   </slide>
 
