Updating MDN image

--- a/index.html
+++ b/index.html
@@ -1189,6 +1189,7 @@ $.ajax({
     <article>
       <p>Sample code</p>
       <pre class="prettyprint" data-lang="javascript">
+
   var colors = new tracking.ColorTracker(['magenta', 'cyan', 'yellow']);
 
   colors.on('track', function(event) {
@@ -1264,8 +1265,16 @@ $.ajax({
   </slide>
 
   <slide>
+    <aside class="note">
+      <section>
+        <ul>
+          <li>Mozilla Developer Network</li>
+          <li>Don&#39;t use w3schools!</li>
+        </ul>
+      </section>
+    </aside>
     <article class="flexbox vcenter">
-      <img src="images/mozilla-developer-network-javascript-780x563.png" alt="Mozilla Developer Network: JavaScript" style="width: 780px; height: 563px;">
+      <img src="images/mozilla-developer-network-javascript-1336x894.png" alt="Mozilla Developer Network: JavaScript" style="width: 800px; height: 535px;">
     </article>
   </slide>
 
