Update LevelUp image

--- a/index.html
+++ b/index.html
@@ -1312,7 +1312,14 @@ $.ajax({
     </article>
   </slide>
 
-  <slide class="fill nobackground" style="background-image: url(images/tw_levelup_oneslide-1024x768.png); background-size: 100%; background-repeat:no-repeat;"></slide>
+  <!-- <slide class="fill nobackground" style="background-image: url(images/tw_levelup_oneslide-1024x768.png); background-size: 100%; background-repeat:no-repeat;"></slide> -->
+
+  <slide>
+    <article class="flexbox vcenter">
+      <img src="images/tw_levelup-1244x814.png" alt="ThoughtWorks Level Up" style="width: 764px; height: 500px;">
+      <p><br><a href="http://levelup.thoughtworks.com/">http://levelup.thoughtworks.com/</a></p>
+    </article>
+  </slide>
 
   <slide class="logoslide nobackground">
     <article class="flexbox vcenter">
