Add side notes with links

--- a/index.html
+++ b/index.html
@@ -887,6 +887,13 @@ null == undefined  // true
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="http://hoverstud.io/babbit/">Babbit game</a>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Games</h2>
     </hgroup>
@@ -924,6 +931,15 @@ var createEnemies = function(numRows, numCols) {
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="http://hexgl.bkcore.com/play/">HexGL</a>
+          <a href="https://www.google.com/logos/2014/rubiks/iframe/index.html">Rubiks Cube</a>
+          <a href="https://www.chrome.com/racer">Chrome Racer</a>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Games</h2>
     </hgroup>
@@ -955,6 +971,15 @@ renderer.render(scene, camera);
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="http://mozvr.com/">MozVR</a>
+          <a href="https://vr.chromeexperiments.com/">Chrome VR experiments</a>
+        </ul>
+      </section>
+    </aside>
+
     <hgroup>
       <h2>Virtual Reality</h2>
     </hgroup>
@@ -1021,6 +1046,16 @@ effect.render(scene, camera);
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="http://nbremer.github.io/exoplanets/">Exoplanets visualizer</a>
+          <a href="http://fatiherikli.github.io/programming-language-network/#language:Objective-C">Programming languages network</a>
+          <a href="http://d3shooter.herokuapp.com/">Game with d3</a>
+          <a href="http://www.therefugeeproject.org/#/2012">The refugee project</a>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Visualizations</h2>
     </hgroup>
@@ -1057,6 +1092,15 @@ d3.json("flare.json", function(root) {
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="http://cwacht.github.io/nyancat/">NyanCat</a>
+          <a href="http://www.dilladimension.com/">The Dilla Dimension</a>
+          <a href="http://www.georgeandjonathan.com/">Music visualizer></a>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Art</h2>
     </hgroup>
@@ -1067,6 +1111,14 @@ d3.json("flare.json", function(root) {
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="http://wit.ai">Wit.ai</a>
+          <a href="https://labs.wit.ai/demo/index.html">Wit.ai interactive demo</a>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Interaction</h2>
     </hgroup>
@@ -1101,6 +1153,14 @@ $.ajax({
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="http://trackingjs.com/">Tracking.js</a>
+          <a href="http://trackingjs.com/examples/face_camera.html">Face tracking</a>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Interaction</h2>
     </hgroup>
@@ -1135,6 +1195,13 @@ $.ajax({
   </slide>
 
   <slide class="games">
+    <aside class="note">
+      <section>
+        <ul>
+          <a href="https://danielrapp.github.io/doppler/">Doppler Effect</a>
+        </ul>
+      </section>
+    </aside>
     <hgroup>
       <h2>Interaction</h2>
     </hgroup>
