--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <p>Ubiqutous</p>
         <p>Quirky</p>
         <p>Fun!</p>
-        <p>A <em>human</em> programming language (it has flaws)</p>
+        <p>A <em>humane</em> programming language (it has flaws)</p>
     </article>
   </slide>
 
