--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ThoughtWorks</title>
+  <title>Introduction to JavaScript</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <!--<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">-->
@@ -130,8 +130,8 @@
       <p>Something boring</p>
       <p>Something necessary</p>
       <p>Something interesting</p>
-      <p>Something surprising</p>
       <p>Something awesome</p>
+      <p>Something surprising</p>
       <p>Something bad</p>
     </article>
   </slide>
@@ -144,8 +144,8 @@
       <p>Boring: A brief history of JavaScript</p>
       <p>Necessary: The type system</p>
       <p>Interesting: Truthiness, Prototypal inheritance</p>
-      <p>Surprising: Scoping, Concurrency</p>
       <p>Awesome: First class functions, Object literals, Closures</p>
+      <p>Surprising: Scoping, Concurrency</p>
       <p>Bad: Global variables, Equals, and more</p>
     </article>
   </slide>
@@ -524,161 +524,6 @@ child.greet();  // prints <b>"Hello Bob"</b> to the console
   <slide class="segue dark nobackground">
     <aside class="twbar"><img src="images/tw_brackets_color_128x128.png"></aside>
     <hgroup>
-      <h2>Surprising parts</h2>
-      <h3>Scoping, Concurrency</h3>
-    </hgroup>
-  </slide>
-
-  <slide>
-    <hgroup>
-      <h2>Scoping</h2>
-    </hgroup>
-    <article>
-      <p>JavaScript uses C's block syntax (curly braces <code>{}</code>), but there's no block scope.</p>
-      <p>There are only two scopes: global scope and function scope.</p>
-      <p>A variable defined without <code>var</code> is global. Never do this!</p>
-      <p>A variable defined outside any function is global.</p>
-      <p>A variable defined in a function only exists in that function.</p>
-    </article>
-  </slide>
-
-  <slide>
-    <hgroup>
-      <h2>Java vs JavaScript</h2>
-    </hgroup>
-    <article class="build">
-      <pre class="prettyprint" data-lang="java">
-void mymethod() {
-    if (condition == true) {
-        String mystring = "hello";
-    }
-    // mystring is no longer in scope
-}
-</pre>
-      <pre class="prettyprint" data-lang="javascript">
-var myfunc = function () {
-    if (condition === true) {
-        var mystring = "hello";
-    }
-    // mystring = "hello"
-}
-// mystring is no longer in scope
-</pre>
-    </article>
-  </slide>
-
-  <slide>
-    <aside class="note">
-      <section>
-        <ul>
-          <li>There are two variables called <code>first</code></li>
-          <li>One is global scoped, the other is function scoped.</li>
-          <li>In the scopeTest function, the function scoped variable <code>first</code> <em>hides</em> the globally scoped variable <code>first</code></li>
-          <li><code>second</code> is scoped to the <code>scopeTest()</code> function, <em>not</em> the if statement block.</li>
-        </ul>
-      </section>
-    </aside>
-    <hgroup>
-      <h2>Scoping test</h2>
-    </hgroup>
-    <article class="build">
-      <pre class="prettyprint" data-lang="javascript">
-var first = 0;
-var scopeTest = function() {
-  var first = 1;
-  console.log("first=" + first);
-  if (true) {
-      var second = 2;
-  }
-  console.log("second=" + second);
-};
-scopeTest();
-console.log("first=" + first);
-console.log("second=" + second);
-</pre>
-      <pre class="prettyprint" data-lang="javascript">
->> first=1
-   second=2
-   first=0
-   ReferenceError: second is not defined
-</pre>
-    </article>
-  </slide>
-
-  <slide>
-    <aside class="note">
-      <section>
-        <ul>
-          <li>Simple concurrency model based on an event loop</li>
-          <li>Parallellism is supported in browsers via iframes and web workers. Not covered here.</li>
-          <li>Browser event: key is pressed, mouse hovers over area, etc.</li>
-          <li>Elsewhere (NodeJS): <code>setTimeout()</code>, <code>setInterval()</code>, etc.</li>
-        </ul>
-      </section>
-    </aside>
-    <hgroup>
-      <h2>Concurrency: the event loop</h2>
-    </hgroup>
-    <article>
-      <pre class="prettyprint" data-lang="javascript">
-while (queue.waitForEventMessage()) {
-  queue.processNextEventMessage();
-}
-</pre>
-      <p>Each event message is processed completely before any other message is processed.</p>
-      <p>No multi-threading support, as in C, Java, others.</p>
-      <p>How are event messages added to the queue?</p>
-      <ul>
-        <li>In a browser: When a user interface event happens and an event listener is is attached.</li>
-        <li>Elsewhere: <code>setTimeout()</code> and friends</li>
-      </ul>
-    </article>
-  </slide>
-
-  <slide>
-    <aside class="note">
-      <section>
-        <ul>
-          <li>Not 1, 2, 3</li>
-          <li>There's only one variable named <code>i</code>, which is global.</li>
-          <li>After the loop, <code>i === 4</code>, because it was incremented until it failed the loop condition.</li>
-          <li>New event messages are not processed until the current executing event is completed.</li>
-          <li>That last one is a surprise!</li>
-        </ul>
-      </section>
-    </aside>
-    <hgroup>
-      <h2>Event loop test</h2>
-    </hgroup>
-    <article>
-      <p><code>setTimeout(callbackFunction, delayMillis)</code></p>
-      <p>Adds <code>callbackFunction</code> as a message to the event queue, with a delay.</p>
-      <div class="build">
-        <div>
-          <pre class="prettyprint" data-lang="javascript">
-var counter = function() {
-    for (var i = 1; i <= 3; i++) {
-        setTimeout(function() { console.log(i); }, 0);
-    }
-}
-counter();
-</pre>
-        </div>
-        <div>
-          <p>Solution:</p>
-          <pre class="prettyprint" data-lang="javascript">
->> 4
-   4
-   4
-</pre>
-          </div>
-      </div>
-    </article>
-  </slide>
-
-  <slide class="segue dark nobackground">
-    <aside class="twbar"><img src="images/tw_brackets_color_128x128.png"></aside>
-    <hgroup>
       <h2>Awesome parts</h2>
       <h3>First class functions, Object literals, Closures</h3>
     </hgroup>
@@ -850,6 +695,7 @@ outer().inner();
       <h2>Currying</h2>
     </hgroup>
     <article>
+      <p>Create a new function by supplying some arguments of an another function.</p>
       <pre class="prettyprint" data-lang="javascript">
 function describe(adjective) {
   return function(thing) {
@@ -897,6 +743,161 @@ var counter = function() {
 var myCounter = counter();  // create an instance
 </pre>
       <p>Encapsulation: <code>value</code> can't be directly manipulated.</p>
+    </article>
+  </slide>
+
+  <slide class="segue dark nobackground">
+    <aside class="twbar"><img src="images/tw_brackets_color_128x128.png"></aside>
+    <hgroup>
+      <h2>Surprising parts</h2>
+      <h3>Scoping, Concurrency</h3>
+    </hgroup>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Scoping</h2>
+    </hgroup>
+    <article>
+      <p>JavaScript uses C's block syntax (curly braces <code>{}</code>), but there's no block scope.</p>
+      <p>There are only two scopes: global scope and function scope.</p>
+      <p>A variable defined without <code>var</code> is global. Never do this!</p>
+      <p>A variable defined outside any function is global.</p>
+      <p>A variable defined in a function only exists in that function.</p>
+    </article>
+  </slide>
+
+  <slide>
+    <hgroup>
+      <h2>Java vs JavaScript</h2>
+    </hgroup>
+    <article class="build">
+      <pre class="prettyprint" data-lang="java">
+void mymethod() {
+    if (condition == true) {
+        String mystring = "hello";
+    }
+    // mystring is no longer in scope
+}
+</pre>
+      <pre class="prettyprint" data-lang="javascript">
+var myfunc = function () {
+    if (condition === true) {
+        var mystring = "hello";
+    }
+    // mystring = "hello"
+}
+// mystring is no longer in scope
+</pre>
+    </article>
+  </slide>
+
+  <slide>
+    <aside class="note">
+      <section>
+        <ul>
+          <li>There are two variables called <code>first</code></li>
+          <li>One is global scoped, the other is function scoped.</li>
+          <li>In the scopeTest function, the function scoped variable <code>first</code> <em>hides</em> the globally scoped variable <code>first</code></li>
+          <li><code>second</code> is scoped to the <code>scopeTest()</code> function, <em>not</em> the if statement block.</li>
+        </ul>
+      </section>
+    </aside>
+    <hgroup>
+      <h2>Scoping test</h2>
+    </hgroup>
+    <article class="build">
+      <pre class="prettyprint" data-lang="javascript">
+var first = 0;
+var scopeTest = function() {
+  var first = 1;
+  console.log("first=" + first);
+  if (true) {
+      var second = 2;
+  }
+  console.log("second=" + second);
+};
+scopeTest();
+console.log("first=" + first);
+console.log("second=" + second);
+</pre>
+      <pre class="prettyprint" data-lang="javascript">
+>> first=1
+   second=2
+   first=0
+   ReferenceError: second is not defined
+</pre>
+    </article>
+  </slide>
+
+  <slide>
+    <aside class="note">
+      <section>
+        <ul>
+          <li>Simple concurrency model based on an event loop</li>
+          <li>Parallellism is supported in browsers via iframes and web workers. Not covered here.</li>
+          <li>Browser event: key is pressed, mouse hovers over area, etc.</li>
+          <li>Elsewhere (NodeJS): <code>setTimeout()</code>, <code>setInterval()</code>, etc.</li>
+        </ul>
+      </section>
+    </aside>
+    <hgroup>
+      <h2>Concurrency: the event loop</h2>
+    </hgroup>
+    <article>
+      <pre class="prettyprint" data-lang="javascript">
+while (queue.waitForEventMessage()) {
+  queue.processNextEventMessage();
+}
+</pre>
+      <p>Each event message is processed completely before any other message is processed.</p>
+      <p>No multi-threading support, as in C, Java, others.</p>
+      <p>How are event messages added to the queue?</p>
+      <ul>
+        <li>In a browser: When a user interface event happens and an event listener is is attached.</li>
+        <li>Elsewhere: <code>setTimeout()</code> and friends</li>
+      </ul>
+    </article>
+  </slide>
+
+  <slide>
+    <aside class="note">
+      <section>
+        <ul>
+          <li>Not 1, 2, 3</li>
+          <li>There's only one variable named <code>i</code>, which is global.</li>
+          <li>After the loop, <code>i === 4</code>, because it was incremented until it failed the loop condition.</li>
+          <li>New event messages are not processed until the current executing event is completed.</li>
+          <li>That last one is a surprise!</li>
+        </ul>
+      </section>
+    </aside>
+    <hgroup>
+      <h2>Event loop test</h2>
+    </hgroup>
+    <article>
+      <p><code>setTimeout(callbackFunction, delayMillis)</code></p>
+      <p>Adds <code>callbackFunction</code> as a message to the event queue, with a delay.</p>
+      <div class="build">
+        <div>
+          <pre class="prettyprint" data-lang="javascript">
+var counter = function() {
+    for (var i = 1; i <= 3; i++) {
+        setTimeout(function() { console.log(i); }, 0);
+    }
+}
+counter();
+</pre>
+        </div>
+        <div>
+          <p>Solution:</p>
+          <pre class="prettyprint" data-lang="javascript">
+>> 4
+   4
+   4
+</pre>
+          </div>
+      </div>
     </article>
   </slide>
 
