--- a/index.html
+++ b/index.html
@@ -953,7 +953,7 @@ null == undefined  // true
   <slide class="segue dark nobackground">
     <aside class="twbar"><img src="images/tw_brackets_color_128x128.png"></aside>
     <hgroup>
-      <h2>Creative coding with Javascript</h2>
+      <h2>Creative coding with JavaScript</h2>
       <h3>Games, Virtual Reality, Visualizations, etc...</h3>
     </hgroup>
   </slide>
